NativeHTTP By magik6000
for more info visit eleinfo.cba.pl

0105.13:
-option for logging to file
-crash handler improved

2904.13:
-Makefile bug fixes
-Bug-fixes
-Security in NativeStat

2304.13:
-SSL
-Better memory stats in debug build
-option for launching with specified configuration file
-Bugfixes

1804.13:
-now running on BSD sockets
-prepared for SSL integration
-few little bug fixes

1604.13:
-Sessions!
-3 superstring functions can be called w/o object
-few bugfixes

1004.13:
-stats saving/loading
-memory usage reduced
-option to compile debug version
-debug version prints some memory stats
-option for async sending
-few small bugs fixed

0204.13:
-simple stat module
-code formatting

3003.13
-new pagemaper
-bug fixes
-sqlite

1903.13:
-bugfixes
-fixed many memory leaks
-better stability

1703.13:
-New HTTP engine
-few bugfixes
-New error pages
-Now on GitHUB
-Much more

-----Older:
version 0, release 3, patch 3(v0r3p3)
-default Content-tpye can be set in config
-content type can be set by native pages
-fixed bug with no 404 error
-server is demonizing wits '-d' parameter
-simple statistics of hits[will be expanded]

version 0, release 3, patch 2(v0r3p2)
-Fixed reciving requests with long POST data
-Setting in configuration file to set maximal amount of POST data

version 0, release 3, patch 1(v0r3p1)
-bug fixes in .nhp parser
-few bug fixes in page-mapper
-bug fix in nbase loader
-added -fPIC parameter to nhp compilation process
-remote user IP address fot native pages
-single nbase file is now open once[nbase_open function returns same pointer to file]
-added function to decode post data[% codes and '+' spaces]
-config - new option for instant stdout[w/o buffering]

version 0, release 3, patch 0(v0r3p0)
-NativeHTTP DataBase preview[nbase]

version 0, release 2, patch 0(v0r2p0)
-class definitions for session menager(NOT IMPLEMENTED!/NOT DONE!)//removed in v0r3p0, to be done in future
-NativeHTTP Pages - nhp(parsing, compilation, loading, execution)