@@ -80,7 +80,7 @@ exectimeout=-1
 //Automatic page reload
 autopagerefresh=1
 
-//Maximal number of files in page directory[4bytes/1 entry]
+//Maximal number of files in page directory[4 bytes/1 entry]
 pagebase_max=10240
 
 //[stats]
@@ -97,7 +97,7 @@ hourly_transfer_stats=1
 hourly_hits_stat=1
 
 //Empty when stats wont be saved
-statfile=etc/nativehttp/stat.bin
+statfile=./etc/nativehttp/stat.bin
 
 //stat saving rate(minutes)
 stat_save_rate=1
