@@ -39,6 +39,8 @@ namespace http
 
 		void *listener(void *unused)
 		{
+		    prctl(PR_SET_NAME,"nh-list-ssl",0,0,0);
+
 			while(1)
 			{
 				struct sockaddr_in sock_addr;
