@@ -1,6 +1,10 @@
 NativeHTTP By magik6000
 for more info visit eleinfo.cba.pl
 
+DEV:
+-Custom thread names
+-fixed manager crash loop
+
 0105.13:
 -option for logging to file
 -crash handler improved
